--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                         <div class="book-cover">
                             <div class="cover-content">
                                 <h1 class="book-title">A Friendly<br>Introduction to<br>Linear Algebra</h1>
-                                <p class="book-subtitle">Belajar Aljabar Linear dengan Cara yang Berbeda</p>
+                                <p class="book-subtitle">Belajar Aljabar Linear dengan Cara yang Sederhana</p>
                                 <div class="authors-line">
-                                    <span>Alwin & Sahira Almahira Kannajmi</span>
+                                    <span>Alwin & Sahira</span>
                                 </div>
                                 <div class="collaboration">
-                                    <small>Kolaborasi UI × UGM</small>
+                                    <small> UI × UGM</small>
                                 </div>
-                                <div class="version-badge">VERSI GRATIS</div>
+                                <div class="version-badge">FREE VERSION</div>
                             </div>
                         </div>
                         <div class="book-spine"></div>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="feature">
                             <img src="assets/images/icons/university.svg" alt="University" class="feature-icon">
-                            <span>Kolaborasi UI × UGM</span>
+                            <span>UI × UGM Collaboration</span>
                         </div>
                     </div>
 
@@ -101,7 +101,7 @@
     <section id="authors" class="authors-section">
         <div class="container">
             <h2 class="section-title">Tentang Penulis</h2>
-            <p class="section-subtitle">Kolaborasi dua orang gabut</p>
+            <p class="section-subtitle">Kolaborasi Dua Orang Gabut</p>
             
             <div class="authors-grid">
                 <div class="author-card">
@@ -132,7 +132,7 @@
                         <p class="author-affiliation">Universitas Gadjah Mada</p>
                         <p class="author-location">D.I. Yogyakarta, Indonesia</p>
                         <p class="author-email">almahira.sahira0123@gmail.com</p>
-                        <p class="author-description">SKOR UTBK 2024 PK 1000, PM 997 🥶🥶😰</p>
+                        <p class="author-description">RERATA SKOR UTBK 2024 844; PK 1000, PM 997 🥶🥶😰</p>
                     </div>
                 </div>
             </div>
@@ -474,23 +474,23 @@
             <div class="footer-content">
                 <div class="footer-main">
                     <h3>A Friendly Introduction to Linear Algebra</h3>
-                    <p>Kolaborasi UI × UGM untuk pembelajaran matematika yang lebih ramah</p>
+                    <p>UI × UGM collab to make math feel less scary and more fun</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-section">
                         <h4>Penulis</h4>
                         <p>Alwin (Universitas Indonesia)</p>
-                        <p>Sahira Almahira Kannajmi (UGM)</p>
+                        <p>Sahira (Universitas Gadjah Mada)</p>
                     </div>
                     <div class="footer-section">
                         <h4>Kontak</h4>
-                        <p>@virellith</p>
+                        <p>@virellith [Instagram]</p>
                         <p>alwinnear@gmail.com</p>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Alwin & Sahira Almahira Kannajmi.</p>
+                <p>&copy; 2024 Alwin & Sahira</p>
                 <p class="collab-note">MIT Computing x Harvard Medical School (in the planning stages)</p>
             </div>
         </div>
