--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <section id="authors" class="authors-section">
         <div class="container">
             <h2 class="section-title">Tentang Penulis</h2>
-            <p class="section-subtitle">Kolaborasi Dua Orang Gabut</p>
+            <p class="section-subtitle">Kolaborasi dua orang gabut</p>
             
             <div class="authors-grid">
                 <div class="author-card">
