--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                             <img src="assets/images/icons/book.svg" alt="">
                             Baca Sekarang
                         </button>
+                        <button class="btn btn-primary" onclick="downloadBook()">
+                            <img src="assets/images/icons/download.svg" alt="">
+                            Unduh PDF
+                        </button>
                         <button class="btn btn-secondary" onclick="scrollToContact()">
                             Dapatkan Versi Lengkap
                         </button>
