--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <p class="author-affiliation">Universitas Indonesia</p>
                         <p class="author-location">Depok, Indonesia</p>
                         <p class="author-email">alwinnear@gmail.com</p>
-                        <p class="author-description">Kadang jadi dokter, kadang jadi programmer, kadang jadi matematikawan, kadang jadi ekonom, kadang jadi engineering boy 🤙😎</p>
+                        <p class="author-description">Triple Major @ Universitas Indonesia, Lead; UI Advanced Interdisciplinary Research Lab (UI-AIR Lab)</p>
                     </div>
                 </div>
 
@@ -132,11 +132,11 @@
                         </div>
                     </div>
                     <div class="author-info">
-                        <h3>Sahira Almahira Kannajmi</h3>
+                        <h3>Sahira Almahira</h3>
                         <p class="author-affiliation">Universitas Gadjah Mada</p>
                         <p class="author-location">D.I. Yogyakarta, Indonesia</p>
                         <p class="author-email">almahira.sahira0123@gmail.com</p>
-                        <p class="author-description">RERATA SKOR UTBK 2024 844; PK 1000, PM 997 🥶🥶😰</p>
+                        <p class="author-description">Achieved Top 4 Highest National Score in UTBK-SNBT 2024, with perfect score in PK (1000) and near-perfect in PM (997)</p>
                     </div>
                 </div>
             </div>
